--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest
+  - pytest --cov=imgprocalgs --cov=tests --cov=docs/src --cov-report=term-missing tests
 
-after_success:
-  - codecov
+after_script:
   - bash <(curl -s https://codecov.io/bash)
